[project]
name = "jupyter-ao-deploy-streamlit-w2-jd"
version = "0.1.0"
description = ""
authors = [
    {name = "joaobarreto27",email = "joao.vito1951@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11, <3.12"
dependencies = [
    "openpyxl (>=3.1.5,<4.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "plotly (>=6.2.0,<7.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "sqlalchemy (>=2.0.42,<3.0.0)",
    "streamlit (>=1.48.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
